--- a/src/app/modules/school/Addschool/school.component.html
+++ b/src/app/modules/school/Addschool/school.component.html
@@ -2,21 +2,21 @@
 
   <mat-card class="header_card">
     <p style="line-height: 30px;">
-      <span style="float: left;">Add School</span> <span style="float: right;"><a>Home</a> > Add School </span>
+      <span style="float: left;">Add School</span> <span class="float-right"><a>Home</a> > Add School </span>
     </p>
   </mat-card>
 
   <mat-card class="content_box">
     <form action="" [formGroup]="objectForm">
-      <div class="row">
+      <div class="row m-0">
         <div class="col-md-4" formArrayName="schools">
-          <div class="row" *ngFor='let School of SchoolList;index as i'>
-            <p style="line-height: 20px;"> School * </p>
+          <div class="row mt-2" *ngFor="let School of SchoolList;index as i">
+            <p class="p-0 m-0"> School * </p>
             <input type="text" formControlName="{{i}}">
           </div>
 
         </div>
-        <div class="col-md-2" style="margin-top: 30px;" *ngIf = 'editFlag'>
+        <div class="col-md-2" style="margin-top: 25px;" *ngIf="editFlag">
           <button mat-mini-fab color="accent" (click)='addSchool()'>
             <mat-icon>plus_one</mat-icon>
           </button>
@@ -24,10 +24,10 @@
       </div>
 
 
-      <div class="row" style="margin-top: 10px;">
-        <button mat-raised-button color="accent" style="margin: 4px;" (click)="onSubmit()" *ngIf = 'editFlag'>Save</button>
-        <button mat-raised-button color="accent" style="margin: 4px;" (click)="onUpdate()" *ngIf = '!editFlag'>Update</button>
-        <button mat-raised-button color="accent" style="margin: 4px;">Reset</button>
+      <div class="row m-0 mt-3">
+        <button mat-raised-button color="primary" class="mr-2" (click)="onSubmit()" *ngIf = 'editFlag'>Save</button>
+        <button mat-raised-button color="primary" class="mr-2" (click)="onUpdate()" *ngIf = '!editFlag'>Update</button>
+        <button mat-stroked-button color="warn" class="mr-2" >Reset</button>
       </div>
     </form>
   </mat-card>
