--- a/src/app/modules/semester/view-sem/view-sem.component.html
+++ b/src/app/modules/semester/view-sem/view-sem.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <mat-card class="header_card">
             <p style="line-height: 30px;">
-                <span style="float: left;">View School</span> <span style="float: right;"><a>Home</a> > View School
+                <span style="float: left;">View Semester</span> <span style="float: right;"><a routerLink="/dashboard">Home</a> > View Semester
                 </span>
             </p>
         </mat-card>
