--- a/src/app/modules/Type/fee-typeview/fee-typeview.component.html
+++ b/src/app/modules/Type/fee-typeview/fee-typeview.component.html
@@ -29,7 +29,7 @@
                     <ng-container matColumnDef="update">
                         <th mat-header-cell *matHeaderCellDef> Update </th>
                         <td mat-cell *matCellDef="let element">
-                            <mat-icon color="primary" (click)='updateSchool(element)'>edit</mat-icon>  
+                            <mat-icon color="primary" (click)='updateFeeType(element)'>edit</mat-icon>  
                         </td>
                     </ng-container>
 
