--- a/src/app/modules/department/add-department/add-department.component.html
+++ b/src/app/modules/department/add-department/add-department.component.html
@@ -9,24 +9,24 @@
 
   <mat-card class="content_box">
     <form action="" [formGroup]="objectForm">
-      <div class="row">
+      <div class="row m-0">
         <div class="col-md-4 ml-1">
           <div class="row" style="display: flex;">
-            <label for="cars">SELECT SCHOOL:</label>
+            <label class="m-0" for="cars">SELECT SCHOOL:</label>
             <select size="1" formControlName="schoolName" (ngModelChange)='selectSchool($event)'>
               <option *ngFor=' let school of schoolList' [value]="school.id">{{school.schoolName}}</option>
             </select>
           </div>
         </div>
 
-        <div class="col-md-4" formArrayName="departments">
-          <div class="row" *ngFor='let department of departmentList;index as i'>
-            <p style="line-height: 20px;"> School * </p>
+        <div class="col-md-4 ml-3" formArrayName="departments">
+          <div class="row" *ngFor="let department of departmentList;index as i">
+            <p class="m-0 mb-1"> School * </p>
             <input type="text" formControlName="{{i}}">
           </div>
 
         </div>
-        <div class="col-md-2" style="margin-top: 30px;">
+        <div class="col-md-2" style="margin-top: 20px;">
           <button mat-mini-fab color="accent" (click)='addDepartment()'>
             <mat-icon>plus_one</mat-icon>
           </button>
@@ -35,10 +35,10 @@
       </div>
 
 
-      <div class="row" style="margin-top: 10px;">
-        <button mat-raised-button color="accent" style="margin: 4px;" (click)="onSubmit()"  *ngIf ='editFlag'>Save</button>
-        <button mat-raised-button color="accent" style="margin: 4px;" (click)="update()" *ngIf = '!editFlag'>Update</button>
-        <button mat-raised-button color="accent" style="margin: 4px;">Reset</button>
+      <div class="row m-0 mt-3" >
+        <button mat-raised-button color="primary" class="mr-2" (click)="onSubmit()"  *ngIf ='editFlag'>Save</button>
+        <button mat-raised-button color="primary" class="mr-2" (click)="update()" *ngIf = '!editFlag'>Update</button>
+        <button mat-stroked-button color="warn" class="mr-2" >Reset</button>
       </div>
     </form>
   </mat-card>
