--- a/src/app/modules/department/add-department/add-department.component.scss
+++ b/src/app/modules/department/add-department/add-department.component.scss
@@ -9,19 +9,11 @@
 }
 .content_box{
     width: 100%;
-    height: 300px;
+    min-height: 300px;
     margin: 10px 0px;
     box-shadow: 0 0 20px #8c8c8c;
 }
-button :hover{
-    border-color: #ff4081;
-}
-button :active{
-    border-color: #ff4081;
-}
-button :focus{
-    border-color: #ff4081;
-}
+
 
 input{
     width: 100%; 
