--- a/src/app/modules/fees/add-fee/add-fee.component.html
+++ b/src/app/modules/fees/add-fee/add-fee.component.html
@@ -2,17 +2,17 @@
 
   <mat-card class="header_card">
     <p style="line-height: 30px;">
-      <span style="float: left;">Add Department</span> <span style="float: right;"><a>Home</a> > Add Department </span>
+      <span style="float: left;">Add Fees</span> <span style="float: right;"><a>Home</a> > Add Fees </span>
     </p>
   </mat-card>
 
 
   <mat-card class="content_box">
     <form action="" [formGroup]="objectForm">
-      <div class="row">
+      <div class="row m-0">
         <div class="col-md-3 mr-2 ml-3">
           <div class="row" style="display: flex;">
-            <label for="cars">SELECT SCHOOL:</label>
+            <label class="m-0" for="cars">SELECT SCHOOL:</label>
             <select size="1" formControlName="schoolName" (ngModelChange)='selectSchool($event)'>
               <option *ngFor=' let school of schoolList' [value]="school.id">{{school.schoolName}}</option>
             </select>
@@ -21,7 +21,7 @@
 
         <div class="col-md-3 mr-2 ml-1">
           <div class="row" style="display: flex;">
-            <label for="cars">SELECT DEPARTMENT:</label>
+            <label class="m-0" for="cars">SELECT DEPARTMENT:</label>
             <select size="1" formControlName="departmentName" (ngModelChange)='selectDepartment($event)'>
               <option *ngFor=' let department of departmentList' [value]="department.id">{{department.departmentName}}
               </option>
@@ -31,7 +31,7 @@
 
         <div class="col-md-3 mr-2 ml-1">
           <div class="row" style="display: flex;">
-            <label for="cars">SELECT PROGRAMME:</label>
+            <label class="m-0" for="cars">SELECT PROGRAMME:</label>
             <select size="1" formControlName="programmeName" (ngModelChange)='selectProgramme($event)'>
               <option *ngFor=' let programme of programmeList' [value]="programme.id">{{programme.programName}}</option>
             </select>
@@ -40,10 +40,10 @@
 
       </div>
 
-      <div class="row">
+      <div class="row m-0 mt-3">
         <div class="col-md-3 mr-2 ml-3">
           <div class="row" style="display: flex;">
-            <label for="cars">SELECT SEMESTER:</label>
+            <label class="m-0" for="cars">SELECT SEMESTER:</label>
             <select size="1" formControlName="semesterName" (ngModelChange)='selectSemester($event)'>
               <option *ngFor=' let semester of semesterList' [value]="semester.id">{{semester.semesterName}}</option>
             </select>
@@ -52,7 +52,7 @@
 
         <div class="col-md-3 mr-2 ml-1">
           <div class="row" style="display: flex;">
-            <label for="cars">SELECT DIVISION:</label>
+            <label class="m-0" class="m-0" for="cars">SELECT DIVISION:</label>
             <select size="1" formControlName="divisionName" (ngModelChange)='selectDivision($event)'>
               <option *ngFor='let type of typeList' [value]="type.id">{{type.typeName}}</option>
             </select>
@@ -61,7 +61,7 @@
 
         <div class="col-md-3 mr-2 ml-1">
           <div class="row" style="display: flex;">
-            <label for="cars">SELECT FREQUENCY:</label>
+            <label class="m-0" for="cars">SELECT FREQUENCY:</label>
             <select size="1" formControlName="frequencyName" (ngModelChange)='selectFrequency($event)'>
               <option *ngFor='let type of frequency' [value]="type.name">{{type.name}}</option>
             </select>
@@ -69,11 +69,11 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row m-0 mt-3">
 
         <div class="col-md-3 mr-2 ml-3" formArrayName="feeType">
-          <div class="row" style="display: flex;" *ngFor='let fee of feeTypeList;index as i'>
-            <label for="cars">SELECT Type:</label>
+          <div class="row" style="display: flex;" *ngFor="let fee of feeTypeList;index as i">
+            <label class="m-0" for="cars">SELECT Type:</label>
             <select size="1" formControlName="{{i}}" (ngModelChange)='selectType($event)'>
               <option *ngFor='let type of typeList' [value]="type.id">{{type.typeName}}</option>
             </select>
@@ -81,13 +81,13 @@
         </div>
 
         <div class="col-md-3 mr-2 ml-1" formArrayName="fee">
-          <div class="row" *ngFor='let fee of feeList;index as i'>
-            <p style="line-height: 20px;"> FEE TYPE * </p>
+          <div class="row" *ngFor="let fee of feeList;index as i">
+            <p class="m-0 mb-1"> FEE TYPE * </p>
             <input type="text" formControlName="{{i}}">
           </div>
         </div>
 
-        <div class="col-md-2" style="margin-top: 30px;">
+        <div class="col-md-2" style="margin-top: 20px;">
           <button mat-mini-fab color="accent" (click)='addFee()'>
             <mat-icon>plus_one</mat-icon>
           </button>
@@ -95,9 +95,9 @@
       </div>
 
 
-      <div class="row" style="margin-top: 10px;">
-        <button mat-raised-button color="accent" style="margin: 4px;" (click)="onSubmit()">Save</button>
-        <button mat-raised-button color="accent" style="margin: 4px;">Reset</button>
+      <div class="row m-0 mt-3 px-3">
+        <button mat-raised-button color="primary" class="mr-3" (click)="onSubmit()">Save</button>
+        <button mat-stroked-button color="warn" class="mr-3">Reset</button>
       </div>
     </form>
   </mat-card>
