--- a/src/app/modules/programme/add-programme/add-programme.component.html
+++ b/src/app/modules/programme/add-programme/add-programme.component.html
@@ -2,17 +2,17 @@
 
   <mat-card class="header_card">
     <p style="line-height: 30px;">
-      <span style="float: left;">Add Department</span> <span style="float: right;"><a>Home</a> > Add Department </span>
+      <span style="float: left;">Add Programme</span> <span style="float: right;"><a routerLink="/dashboard">Home</a> > Add Programme </span>
     </p>
   </mat-card>
 
 
   <mat-card class="content_box">
     <form action="" [formGroup]="objectForm">
-      <div class="row">
+      <div class="row m-0">
         <div class="col-md-3 mr-2 ml-3">
           <div class="row" style="display: flex;">
-            <label for="cars">SELECT SCHOOL:</label>
+            <label class="p-0 m-0" for="cars">SELECT SCHOOL:</label>
             <select size="1" formControlName="schoolName" (ngModelChange)='selectSchool($event)'>
               <option *ngFor=' let school of schoolList' [value]="school.id">{{school.schoolName}}</option>
             </select>
@@ -21,22 +21,22 @@
 
         <div class="col-md-3 mr-2 ml-1">
           <div class="row" style="display: flex;">
-            <label for="cars">SELECT DEPARTMENT:</label>
+            <label class="p-0 m-0" for="cars">SELECT DEPARTMENT:</label>
             <select size="1" formControlName="departmentName" (ngModelChange)='selectDepartment($event)'>
               <option *ngFor=' let department of departmentList' [value]="department.id">{{department.departmentName}}</option>
             </select>
           </div>
         </div>
 
-        <div class="col-md-3 mr-2" formArrayName="programme">
-          <div class="row" *ngFor='let programme of programmeList;index as i'>
-            <p style="line-height: 20px;"> PROGRAMME * </p>
+        <div class="col-md-3 mr-2 ml-1" formArrayName="programme">
+          <div class="row" *ngFor="let programme of programmeList;index as i">
+            <label class="p-0 mb-1"> PROGRAMME * </label>
             <input type="text" formControlName="{{i}}">
           </div>
 
         </div>
-        <div class="col-md-2" style="margin-top: 30px;">
-          <button mat-mini-fab color="accent" (click)='addprogramme()'>
+        <div class="col-md-2" style="margin-top: 25px;" *ngIf="!isEdit">
+          <button mat-mini-fab color="accent" (click)="addprogramme()">
             <mat-icon>plus_one</mat-icon>
           </button>
         </div>
@@ -44,9 +44,10 @@
       </div>
 
 
-      <div class="row" style="margin-top: 10px;">
-        <button mat-raised-button color="accent" style="margin: 4px;" (click)="onSubmit()">Save</button>
-        <button mat-raised-button color="accent" style="margin: 4px;">Reset</button>
+      <div class="row m-0 p-2" style="margin-top: 10px;">
+        <button mat-raised-button color="primary" class="ml-2" *ngIf="!isEdit" (click)="onSubmit()">Save</button>
+        <button mat-raised-button color="primary" class="ml-2" *ngIf="isEdit" (click)="onSubmit(true)">Update</button>
+        <button mat-stroked-button color="warn" class="ml-3">Reset</button>
       </div>
     </form>
   </mat-card>
