--- a/src/app/modules/programme/add-programme/add-programme.component.scss
+++ b/src/app/modules/programme/add-programme/add-programme.component.scss
@@ -9,7 +9,7 @@
 }
 .content_box{
     width: 100%;
-    height: 300px;
+    min-height: 300px;
     margin: 10px 0px;
     box-shadow: 0 0 20px #8c8c8c;
 }
