--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>Admin Panel</mat-card-title>
-      <mat-card-subtitle>Works here</mat-card-subtitle>
+      <mat-card-subtitle>Welcome {{userDetails['userName']}}</mat-card-subtitle>
     </mat-card-header>
 
     <mat-list role="list">
@@ -94,7 +94,7 @@
           <a mat-list-item matRipple routerLinkActive="list-item-active" routerLink="/fee/view">View Fee</a>
         </mat-expansion-panel>
 
-        <mat-expansion-panel>
+        <!-- <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
               Organize
@@ -111,7 +111,7 @@
           <a mat-list-item matRipple routerLinkActive="list-item-active" routerLink="/organize/Penalty">Penalty</a>
 
           <a mat-list-item matRipple routerLinkActive="list-item-active" routerLink="/organize/OfflineFee">Offline Fee</a>
-        </mat-expansion-panel>
+        </mat-expansion-panel> -->
       </mat-accordion>
 
     </mat-list>
