--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-.search-div{
+
+*:focus {
+    outline: none !important;
+}
+
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+.search-div {
     margin: 10px 20px;
     display: flex;
     background-color: #f5f5f5;
@@ -10,46 +21,38 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     align-items: center;
     height: 50px;
 }
-.search-form-field{
+.search-form-field {
     width: 60%;
     margin-left: 10px;
     border-radius: 5px;
-    
 }
+
 .mat-form-field-appearance-outline .mat-form-field-infix {
     padding: 0px;
 }
-.search-form-field div.mat-form-field-underline{
+
+.search-form-field div.mat-form-field-underline {
     display: none;
 }
+
 // .search-form-field div.mat-form-field-infix{
 //    border-top: 0px;
 // }
-.search-form-field div.mat-form-field-wrapper{
-   padding-bottom: 5px;
+.search-form-field div.mat-form-field-wrapper {
+    padding-bottom: 5px;
 }
-.search-form-field div.mat-form-field-suffix{
+.search-form-field div.mat-form-field-suffix {
     height: 32px;
     width: 32px;
 }
-.mat-button-focus-overlay { 
-    background-color: transparent!important; 
+.mat-button-focus-overlay {
+    background-color: transparent !important;
 }
 
-.mat-icon-button .mat-button-base .cdk-focussed .cdk-mouse-focussed{
+.mat-icon-button .mat-button-base .cdk-focussed .cdk-mouse-focussed {
     border-color: transparent !important;
 }
-.mat-icon-button :focus{
+.mat-icon-button :focus {
     border-color: transparent !important;
     border: none;
 }
-button{
-    border: none;
-}
-.mat-button-focus-overlay{
-    border: none;
-
-}
-
-
-
