--- a/src/app/modules/active-fee/add-active-fee/add-active-fee.component.html
+++ b/src/app/modules/active-fee/add-active-fee/add-active-fee.component.html
@@ -1,1 +1,144 @@
-<p>add-active-fee works!</p>
+<div class="container">
+
+    <mat-card class="header_card">
+        <p style="line-height: 30px;">
+            <span style="float: left;">Active Fee</span> <span style="float: right;"><a routerLink="/dashboard">Home</a> >
+                Active Fee </span>
+        </p>
+    </mat-card>
+
+
+    <mat-card class="content_box form-active-fee">
+        <form action="" [formGroup]="objectForm" (submit)="onSubmit()">
+            <div class="row m-0">
+                <div class="col-md-3 mr-2 ml-3">
+                    <div class="row" style="display: flex;">
+                        <label class="m-0" for="cars">School</label>
+                        <select size="1" formControlName="schoolId" required (ngModelChange)='selectSchool($event)'>
+                            <option value="" selected>Select School</option>
+                            <option *ngFor=' let school of schoolList' [value]="school.id">{{school.schoolName}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="col-md-3 mr-2 ml-1">
+                    <div class="row" style="display: flex;">
+                        <label class="m-0" for="cars">Department</label>
+                        <select size="1" formControlName="departmentId" required
+                            (ngModelChange)='selectDepartment($event)'>
+                            <option value="" selected>Select Department</option>
+                            <option *ngFor=' let department of departmentList' [value]="department.id">
+                                {{department.departmentName}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="col-md-3 mr-2 ml-1">
+                    <div class="row" style="display: flex;">
+                        <label class="m-0" for="cars">programme</label>
+                        <select size="1" formControlName="programId" required (ngModelChange)='selectProgramme($event)'>
+                            <option value="" selected>Select programme</option>
+                            <option *ngFor=' let programme of programmeList' [value]="programme.id">
+                                {{programme.programName}}</option>
+                        </select>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row m-0 mt-3">
+                <div class="col-md-3 mr-2 ml-3">
+                    <div class="row" style="display: flex;">
+                        <label class="m-0" for="cars">Semester</label>
+                        <select size="1" formControlName="semesterId" required (ngModelChange)='selectSemester($event)'>
+                            <option value="" selected>Select Semester</option>
+                            <option *ngFor=' let semester of semesterList' [value]="semester.id">
+                                {{semester.semesterName}}</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="col-md-3 mr-2 ml-1">
+                    <div class="row" style="display: flex;">
+                        <label class="m-0" class="m-0" for="cars">Division</label>
+                        <select size="1" formControlName="divisionId" required (ngModelChange)='selectDivision($event)'>
+                            <option value="" selected>Select Division</option>
+                            <option *ngFor='let division of divisionList' [value]="division.id">
+                                {{division.divisionName}}</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="col-md-3 mr-2 ml-1">
+                    <div class="row" style="display: flex;">
+                        <label class="m-0" for="cars">Penalty</label>
+                        <select size="1" formControlName="penaltyId" required>
+                            <option value="" selected>Select Penalty</option>
+                            <option *ngFor='let pen of penalty' [value]="pen.id">{{pen.penaltyName}}</option>
+                        </select>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="row m-0 mt-3">
+                <div class="col-md-3 p-0 ml-3">
+                    <label class="m-0" for="cars">Due Date</label>
+                    <mat-form-field appearance="fill" class="w-100">
+                        <input matInput [min]="minDate" formControlName="activationDate" [matDatepicker]="picker">
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                </div>
+                <div class="col-md-3 p-0 ml-3">
+                    <div class="m-0 mb-2" for="cars">Active Fee</div>
+                    <mat-slide-toggle formControlName="activateFee"></mat-slide-toggle>
+                </div>
+            </div>
+            <div class="row m-0 mt-3 px-3">
+                <button mat-raised-button color="primary" class="mr-3" *ngIf="!isEdit" type="submit">Save</button>
+                <button mat-raised-button color="primary" class="mr-3" *ngIf="isEdit" type="submit">Update</button>
+                <button mat-stroked-button color="warn" class="mr-3" routerLink="/fee">Cancel</button>
+            </div>
+        </form>
+    </mat-card>
+
+    <div class="row m-0">
+        <mat-card class="content_box w-100" *ngIf="studentsList">
+            <h5 class="float-left">Students Details</h5>
+            <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource">
+
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="index">
+                        <th mat-header-cell *matHeaderCellDef> No. </th>
+                        <td mat-cell *matCellDef="let element;index as i"> {{i+1}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="studentName">
+                        <th mat-header-cell *matHeaderCellDef> Student Name </th>
+                        <td mat-cell *matCellDef="let element"> {{element.studentName}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="netAmount">
+                        <th mat-header-cell *matHeaderCellDef> Total Net Amount </th>
+                        <td mat-cell *matCellDef="let element"> {{element.netAmount}} </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+
+                <mat-paginator #matPaginator [pageSizeOptions]="[10, 15, 25]" showFirstLastButtons>
+                </mat-paginator>
+            </div>
+        </mat-card>
+
+    </div>
+
+
+
+</div>
